# stream-pipeline

./: .gitignore  Cargo.toml  README.md
benches/: backpressure.rs  throughput.rs
examples/: filter_pipeline.rs  word_count.rs
src/: backpressure.rs  buffer.rs  error.rs  lib.rs  metrics.rs  pipeline.rs  stage.rs
tests/: test_pipeline.rs
