[package]
name = "stream-pipeline"
version = "0.1.0"
edition = "2021"
authors = ["Stream Processing Engine Contributors"]
description = "A backpressure-aware stream processing engine for real-time data pipelines"
license = "MIT"
repository = "https://github.com/example/stream-pipeline"

[dependencies]
crossbeam = "0.8"
thiserror = "1.0"
parking_lot = "0.12"
num_cpus = "1.16"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "backpressure"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
